Changed tabs to the menu instead of online tutorial

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">WheelOfTime</string>
     <string name="action_settings">Settings</string>
+    <string name="action_home">Home</string>
+    <string name="action_search">Search</string>
+    <string name="action_favorites">Favorites</string>
 </resources>
