--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_home">Home</string>
     <string name="action_search">Search</string>
     <string name="action_favorites">Favorites</string>
+    <string name="character_name_text">Name</string>
 </resources>
