--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="action_search">Search</string>
     <string name="action_favorites">Favorites</string>
     <string name="character_name_text">Name</string>
+    <string name="character_pronunciation_text">Pronunciation</string>
+    <string name="character_description_text">Description</string>
 </resources>
