--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="character_name_text">Name</string>
     <string name="character_pronunciation_text">Pronunciation</string>
     <string name="character_description_text">Description</string>
+    <string name="HOME_STRING">home</string>
+    <string name="FAVORITE_STRING">favorite</string>
+    <string name="SEARCH_STRING">search</string>
 </resources>
